Close the real V04-CAL-02 gap: wire Drift to an actual PipelineReport
The prior reconciliation session implemented Drift.compute as a pure
formula and called V04-CAL-02 remediated, but never traced whether it
was reachable from a real scan. It was not: nothing turned a
PipelineReport (or its JSON) into the EntropySnapshot Drift.compute
requires, and PipelineReport/its JSON carry no subject identifier at
all - confirmed by reading Main.toJson, MetricsJson, and every file
under aerf-report/src/main in full, and by confirming no JSON reader
exists anywhere in the reactor (aerf-report only has writers).

Adds the missing link:
- PipelineReport.entropyByDimension(): the four-dimension map
  Pipeline.run already builds internally for AggregatedEntropy,
  reconstructed from the report's own four results so the two can't
  drift apart, built as an explicit LinkedHashMap (not Map.of) since
  this one's output reaches JSON and Map.of's randomized-per-JVM-run
  iteration order would violate section 14's cross-run determinism
  requirement - AggregatedEntropy is safe with Map.of because it only
  ever does key lookups, never iterates.
- PipelineReport.toEntropySnapshot(subjectId): packages a real report
  as Drift's input, given a caller-supplied subject id (this pipeline
  has no project-identity concept of its own to invent one from).
- DriftJson: serializes a computed drift map, matching every other
  metric's writer-only pattern in aerf-report.

Also fixes a real latent determinism bug in EntropySnapshot from last
session: its constructor used Map.copyOf, which (per this project's
own documented Increment 1 regression) does not guarantee preserving
a source map's iteration order - now wrapped explicitly instead.

New end-to-end regression test (DriftEndToEndTest): a genuine
Pipeline.run output, diffed against a hand-supplied baseline snapshot
(the architecturally correct seam - loading a real historical
baseline is a storage-layer concern this pipeline deliberately
doesn't 